Overflow issue resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,10 +18,6 @@
     src: url("/fonts/Trade-Gothic-LT-Bold.ttf");
 }
 
-.overflow-custom {
-    -webkit-overflow-scrolling: touch;
-}
-
 /* rc slider css [start] */
 .rc-slider-track.rc-slider-track-1 {
     @apply bg-primary;
@@ -66,8 +62,7 @@ Chrome
 }
 /* Custom scroll bar Firefox */
 .sidebar {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+    overflow-y: auto;
     scrollbar-color: #f7be32 #ddd !important;
     scrollbar-width: 3px !important;
 }
